@@ -15,13 +15,13 @@
         <!-- Removes warnings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Api's -->
-        <spigotAPI.version>1.19-R0.1-SNAPSHOT</spigotAPI.version>
-        <spigot.server.version>1.19-R0.1-SNAPSHOT</spigot.server.version>
+        <spigotAPI.version>1.19.1-R0.1-SNAPSHOT</spigotAPI.version>
+        <spigot.server.version>1.19.1-R0.1-SNAPSHOT</spigot.server.version>
         <spigot.annotations.version>1.2.3-SNAPSHOT</spigot.annotations.version>
         <lombok.version>1.18.24</lombok.version>
         <bstats.version>3.0.0</bstats.version>
         <vault.version>1.7.1</vault.version>
-        <commandapi.version>8.4.1</commandapi.version>
+        <commandapi.version>8.5.0-SNAPSHOT</commandapi.version>
         <nbtapi.version>2.10.0</nbtapi.version>
         <!-- Maven -->
         <maven.compiler.versions>17</maven.compiler.versions>
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>dev.jorel</groupId>
             <artifactId>commandapi-shade</artifactId>
-            <version>8.5.0-SNAPSHOT</version>
+            <version>${commandapi.version}</version>
         </dependency>
         <!-- bstats -->
         <dependency>
@@ -177,12 +177,12 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-            <!-- For Shading -->
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+            <!--  <compilerArgs>-enable-preview</compilerArgs> -->
+         </configuration>
+     </plugin>
+     <!-- For Shading -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -197,7 +197,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <minimizeJar>true</minimizeJar>
+                    <!-- for release, faster compile <minimizeJar>true</minimizeJar>-->
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <filters>
                         <filter>
